feat: add sharing history sidebar